--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   text-align: center;
+  color: #40514E;
   font-family: 'Merriweather', serif;
 }
 
@@ -11,42 +12,152 @@ body {
   width: 100%;
 }
 
-.middle-container {}
+.middle-container {
+  margin: 100px 0;
+}
 
-.bottom-container {}
+.bottom-container {
+  background-color: #66BFBF;
+  height: 125px;
+  margin-top: 100px;
+  padding-top: 50px;
+}
 
 .bottom-cloud {
   position: absolute;
   bottom: 300px;
-  left: 300px;
+  left: 250px;
+}
+
+.end-line {
+  color: #EAF6F6;
+  font-size: 1.1rem;
+  font-weight: 200;
+}
+
+.footer-link {
+  color: #11999E;
+  text-decoration: none;
+  font-size: 20px;
+  font-family: sans-serif;
+  font-weight: normal;
+  word-spacing: 550px;
+  margin:20px 15px;
 }
 
 .top-cloud {
   position: absolute;
   right: 300px;
-  top: 50px;
+  top: 40px;
 }
 
 h1 {
   font-family: 'Cormorant Upright', serif;
-  font-size: 50px;
-  color: #853722;
+  font-size: 5.625rem;
+  ;
+  color: #66BFBF;
+  margin: 50px auto 0 auto;
 }
 
 h2 {
   font-family: 'Montserrat', sans-serif;
+  font-size: 2.5rem;
+  font-weight: normal;
+  padding-bottom: 10px;
+  color: #66BFBF;
+}
+
+.intro {
+  margin: 0 auto;
+  width: 30%;
+
 }
 
 h3 {
   font-family: 'Montserrat', sans-serif;
+  color: #11999E;
 }
 
 p {
-  font-family: 'Amiri', serif;
-  color: #C63722;
-  font-size: 20px;
+  font-family: 'Scheherazade', serif;
+  /*color: #C63722;*/
+  font-size: 25px;
+  font-weight: 600;
+  line-height: 2;
+}
+
+a {
+  color: #11999E
 }
 
 .grammer {
   text-decoration: underline;
+}
+
+.skill-row {
+  width: 50%;
+  margin: 100px auto 100px auto;
+  text-align: left;
+}
+
+.webd {
+  width: 25%;
+  float: left;
+  margin-right: 30px;
+}
+
+.BUTTON_YIG {
+  margin-top: 50px;
+}
+
+.guitar {
+  width: 25%;
+  float: right;
+  margin-left: 30px;
+}
+
+.middle-end {
+  background-color: white;
+  border-style: none;
+  border-color: #EAF6F6;
+  border-top-style: dotted;
+  border-width: 5px;
+  width: 3%;
+margin:100px auto 100px auto;
+}
+
+.bottom-start {
+  background-color: white;
+  border-style: none;
+  border-color: #EAF6F6;
+  border-top-style: dotted;
+  border-width: 5px;
+  width: 3%;
+  margin: 100px auto;
+}
+.btn {
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #4fd0f0;
+  background-image: -webkit-linear-gradient(top, #4fd0f0, #0c94a3);
+  background-image: -moz-linear-gradient(top, #4fd0f0, #0c94a3);
+  background-image: -ms-linear-gradient(top, #4fd0f0, #0c94a3);
+  background-image: -o-linear-gradient(top, #4fd0f0, #0c94a3);
+  background-image: linear-gradient(to bottom, #4fd0f0, #0c94a3);
+  text-decoration: none;
 }
